# ai-meeting-brain

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agents/: classifier.py  extractor.py  graph.py  summarizer.py
api/: main.py
db/: models.py
mcp_server/: server.py
ui/: app.js  index.html  style.css
